# tech-doc-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
evaluation/: dataset.py  evaluate.py
evaluation/results/: eval_results_20260417_161623.json  eval_results_20260417_162006.json
scripts/: generate_report.py  test_pipeline.py
src/: config.py
src/chunking/: chunker.py  cleaner.py  models.py
src/embedding/: vector_store.py
src/generation/: generator.py  models.py  prompts.py
src/ingestion/: models.py  pdf_reader.py
src/mcp_server/: README.md  server.py
src/ui/: app.py
tests/test_chunking/: test_chunker.py
tests/test_embedding/: test_vector_store.py
tests/test_generation/: test_generator.py
tests/test_ingestion/: test_pdf_reader.py
